--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -4,8 +4,9 @@
   width: 100%;
   margin: auto;
   background: navajowhite;
-  border-radius: 20px;
+  border-radius: 5px;
   outline: none;
+  padding: 10px;
 }
 
 .overlay {
@@ -18,8 +19,7 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  padding: 40px 15px;
+  padding: 20px;
   background: rgba(0, 0, 0, 0.46);
   outline: none;
-  transition: opacity var(--layer-transition);
 }
